fixed occassional data reset bug, changed saving/loading system; added validation to editing nodes (for grid invalid spacing); slightly altered defaults

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@
 .keychord-hint {
   color: var(--fg-color);
   font-size: var(--keychord-font-size);
+  align-self: flex-end;
 }
 
 .keychord-hint-match {
